force-app/main/default/objects/AWS_Configuration__mdt/fields/AWS_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Secret_Key__c</fullName>
    <label>AWS Secret Key</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>