force-app/main/default/objects/AWS_Configuration__mdt/fields/IAM_Role_ARN__c.field-meta.xml
<CustomField>
    <fullName>IAM_Role_ARN__c</fullName>
    <label>IAM Role ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>