force-app/main/default/objects/AWS_Configuration__mdt/fields/S3_Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>S3_Bucket_Name__c</fullName>
    <label>S3 Bucket Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>